# personal-library

./: .gitignore  README.md  library.db  main.py  model.py  orm.py  pyproject.toml  queries.py  seed.py
app/: auth.py  config.py  db.py  deps.py  main.py  models.py  schema.py  security.py  templating.py
app/routers/: auth.py  books.py  user.py  users.py
app/static/css/: library.css  style.css
app/static/js/: app.js  forms.js
app/templates/: _book_row.html  _book_tile.html  _macros.html  add_book.html  base.html  book_detail.html  book_form.html  create_user.html  edit_book.html  edit_user.html  index.html  login.html  logout.html  profile.html  profile_edit.html  signup.html  user_books.html  user_detail.html  users.html
tests/: conftest.py  test_queries.py
